@@ -25,7 +25,7 @@
 __revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
 
 """
-Test various uses of the -c (clean) option.
+Test various basic uses of the -c (clean) option.
 """
 
 import os
@@ -177,143 +177,7 @@ test.must_match(test.workpath('foo4.out'), "foo4.in\n")
 test.must_exist(test.workpath('touch1.out'))
 test.must_exist(test.workpath('touch2.out'))
 
-
-expect1 = "scons: Could not remove 'foo1.out': Permission denied\n"
-expect2 = "scons: Could not remove 'foo1.out': The process cannot access the file because it is being used by another process\n"
-
-expect = [
-    test.wrap_stdout(expect1, cleaning=1),
-    test.wrap_stdout(expect2, cleaning=1),
-]
-
-test.writable('.', 0)
-f = open(test.workpath('foo1.out'))
-test.run(arguments = '-c foo1.out')
-stdout = test.stdout()
-matched = None
-for e in expect:
-    if stdout == e:
-        matched = 1
-        break
-if not matched:
-    print stdout
-    test.fail_test()
-test.must_exist(test.workpath('foo1.out'))
-f.close()
-test.writable('.', 1)
-
-test.subdir('subd')
-test.write(['subd', 'foon.in'], "foon.in\n")
-test.write(['subd', 'foox.in'], "foox.in\n")
-test.write('aux1.x', "aux1.x\n")
-test.write('aux2.x', "aux2.x\n")
-test.write('SConstruct', """
-B = Builder(action = r'%(_python_)s build.py $TARGETS $SOURCES')
-env = Environment(BUILDERS = { 'B' : B }, FOO = 'foo2')
-env.B(target = 'foo1.out', source = 'foo1.in')
-env.B(target = 'foo2.out', source = 'foo2.xxx')
-foo2_xxx = env.B(target = 'foo2.xxx', source = 'foo2.in')
-env.B(target = 'foo3.out', source = 'foo3.in')
-SConscript('subd/SConscript')
-Clean(foo2_xxx, ['aux1.x'])
-env.Clean(['${FOO}.xxx'], ['aux2.x'])
-Clean('.', ['subd'])
-""" % locals())
-
-test.write(['subd', 'SConscript'], """
-Clean('.', 'foox.in')
-""")
-
-expect = test.wrap_stdout("""Removed foo2.xxx
-Removed aux1.x
-Removed aux2.x
-""", cleaning=1)
-test.run(arguments = '-c foo2.xxx', stdout=expect)
-test.must_match(test.workpath('foo1.out'), "foo1.in\n")
-test.must_not_exist(test.workpath('foo2.xxx'))
-test.must_match(test.workpath('foo2.out'), "foo2.in\n")
-test.must_match(test.workpath('foo3.out'), "foo3.in\n")
-
-expect = test.wrap_stdout("Removed %s\n" % os.path.join('subd', 'foox.in'),
-                          cleaning = 1)
-test.run(arguments = '-c subd', stdout=expect)
-test.must_not_exist(test.workpath('foox.in'))
-
-expect = test.wrap_stdout("""Removed foo1.out
-Removed foo2.xxx
-Removed foo2.out
-Removed foo3.out
-Removed %s
-Removed %s
-Removed directory subd
-""" % (os.path.join('subd','SConscript'), os.path.join('subd', 'foon.in')),
-                          cleaning = 1)
-test.run(arguments = '-c -n .', stdout=expect)
-
-expect = test.wrap_stdout("""Removed foo1.out
-Removed foo2.out
-Removed foo3.out
-Removed %s
-Removed %s
-Removed directory subd
-""" % (os.path.join('subd','SConscript'), os.path.join('subd', 'foon.in')),
-                          cleaning = 1)
-test.run(arguments = '-c .', stdout=expect)
-test.must_not_exist(test.workpath('subdir', 'foon.in'))
-test.must_not_exist(test.workpath('subdir'))
-
-
-# Ensure that Set/GetOption('clean') works correctly:
-test.write('SConstruct', """
-B = Builder(action = r'%(_python_)s build.py $TARGETS $SOURCES')
-env = Environment(BUILDERS = { 'B' : B })
-env.B(target = 'foo.out', source = 'foo.in')
-
-assert not GetOption('clean')
-""" % locals())
-
-test.write('foo.in', '"Foo", I say!\n')
-
-test.run(arguments='foo.out')
-test.must_match(test.workpath('foo.out'), '"Foo", I say!\n')
-
-test.write('SConstruct', """
-B = Builder(action = r'%(_python_)s build.py $TARGETS $SOURCES')
-env = Environment(BUILDERS = { 'B' : B })
-env.B(target = 'foo.out', source = 'foo.in')
-
-assert GetOption('clean')
-SetOption('clean', 0)
-assert GetOption('clean')
-""" % locals())
-
-test.run(arguments='-c foo.out')
-test.must_not_exist(test.workpath('foo.out'))
-
-test.write('SConstruct', """
-B = Builder(action = r'%(_python_)s build.py $TARGETS $SOURCES')
-env = Environment(BUILDERS = { 'B' : B })
-env.B(target = 'foo.out', source = 'foo.in')
-""" % locals())
-
-test.run(arguments='foo.out')
-test.must_match(test.workpath('foo.out'), '"Foo", I say!\n')
-
-test.write('SConstruct', """
-B = Builder(action = r'%(_python_)s build.py $TARGETS $SOURCES')
-env = Environment(BUILDERS = { 'B' : B })
-env.B(target = 'foo.out', source = 'foo.in')
-
-assert not GetOption('clean')
-SetOption('clean', 1)
-assert GetOption('clean')
-""" % locals())
-
-test.run(arguments='foo.out')
-test.must_not_exist(test.workpath('foo.out'))
-
 test.pass_test()
-
 
 # Local Variables:
 # tab-width:4
